# rust-web-fuzz

./: Cargo.toml  Makefile  README.md  config.yaml
payloads/: default.yaml
plugin_dev/: Cargo.toml
plugin_dev/src/: lib.rs
src/: config.rs  core.rs  main.rs  modules.rs  plugin_host.rs  report.rs  scanner.rs
templates/: report.html
