[package]
name = "rust-web-fuzz"
version = "0.1.0"
edition = "2021"
authors = ["Gabryx412-Coder"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
askama = "0.12"
wasmtime = "13.0"
url = "2.4"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

[workspace]
members = ["plugin_dev"]

[profile.release]
lto = true
strip = true
opt-level = 3